# openshift-upgrade

./: Cargo.toml
src/: main.rs
